[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Catherine Yarysheva <martijancatherine@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
