[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Catherine Yarysheva <martijancatherine@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
djangorestframework = "^3.14.0"
django-filter = "^24.1"
django-debug-toolbar = "^4.3.0"
pillow = "^10.2.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
